--- a/config.yml
+++ b/config.yml
@@ -2,10 +2,15 @@
 api_key: RPq124TkDHwsYSY2FnOni9HJqfyMKULEmXr10hL1tVAN3RcREr
 
 reporters:
-  - klass: Random
-    name: random
+  - name: random
+    klass: Random
+
+  - name: haproxy_log_requests
+    klass: HaproxyLogRequests
+    logfile: /var/log/haproxy.log
 
 widgets:
   - klass: Box
     id: 506475
     reporter: random
+    value: value
