Added specs and refactored application into class

--- a/example_config.yml
+++ b/example_config.yml
@@ -7,7 +7,8 @@ reporters:
 
   - name: haproxy_log_requests
     type: HaproxyLogRequests
-    logfile: /var/log/haproxy.log
+    options:
+      logfile: /var/log/haproxy.log
 
 widgets:
   - type: Box
